fixed errors for recipe and list routes
