# routes/recipe-routes.js
@@ -42,6 +42,12 @@ routes.get('/keyWords', recipes.findByKeywords
     }*/
 );
 
+// Retrieve all recipes by ingredients
+routes.get('/ingredients', recipes.findByIngredients
+    // #swagger.tags = ['Recipes']
+    // #swagger.summary = 'Get all recipes that have specified ingredient(s)'
+);
+
 // Retrieve all recipes by user posted
 routes.get('/userPosted/:userPostedId', recipes.findByUserPosted
    // #swagger.tags = ['Recipes']
@@ -56,7 +62,7 @@ routes.get('/userPosted/:userPostedId', recipes.findByUserPosted
 // Retrieve a single recipe with id
 routes.get('/:recipe_id', recipes.findOne
     // #swagger.tags = ['Recipes']
-    // #swagger.summary = 'Get recipe by recipe ID'
+    // #swagger.summary = 'Get one recipe by recipe ID'
     /* swagger.parameters
     */
 );
@@ -64,42 +70,36 @@ routes.get('/:recipe_id', recipes.findOne
 // Retrieve all recipes by key words
 routes.get('/keyWords', authCheck, recipes.findByKeywords
     // #swagger.tags = ['Recipes']
-);
-
-// Retrieve all recipes by ingredients
-routes.get('/ingredients', recipes.findByIngredients
-    // #swagger.tags = ['Recipes']
+    // #swagger.summary = 'Get all recipes that have specified keyword(s)'
 );
 
 // Retrieve all recipes by user posted
 routes.get('/userPosted/:userPostedId', authCheck, recipes.findByUserPosted
     // #swagger.tags = ['Recipes']
+    // #swagger.summary = 'Get all recipes that have been posted by specific userId'
 );
 
 // Retrieve a single recipe with id
 routes.get('/:recipe_id', authCheck, recipes.findOne
     // #swagger.tags = ['Recipes']
+    // #swagger.summary = 'Retrieve a single recipe with recipe id'
 );
 // Retrive all recipes in database
 routes.get('/', recipes.findAll
     // #swagger.tags = ['Recipes']
     // #swagger.summary = 'Get all recipes from database'
-    /* #swagger.parameters['obj'] = {
-        in: 'body',
-        description: 'Retrieve all recipes'
-    }*/
 );
 
 // Update a recipe with id
 routes.put('/:id', validation.updateOneRecipe, recipes.update
     // #swagger.tags = ['Recipes']
-    // #swagger.summary = 'Update recipe using ID'
+    // #swagger.summary = 'Update one recipe using recipe ID'
     /* #swagger.parameters['obj'] = {
         in: 'body',
         description: 'Make updates to recipe using recipe ID',
         example: '62b7adea95fbc1ad13b8f808', 
         schema: {
-            $name: 'Pizza Pie',
+            $name: 'Updated Name Pizza Pie',
             $ingredients: ['pizza crust', 'cheese', 'sauce', 'pepperoni'],
             $instructions: ['Spread sauce on crust', 'Sprinkle cheese on top', 'Top with pepperoni', 'Bake at 400F for 12 min'],
             $imageLink: 'https://unsplash.com/photos/MQUqbmszGGM',
@@ -112,6 +112,7 @@ routes.put('/:id', validation.updateOneRecipe, recipes.update
 // Delete a recipe with id
 routes.delete('/:id', recipes.delete
     // #swagger.tags = ['Recipes']
+    // #swagger.summary = 'Delete one recipe using recipe ID'
 );
 
 module.exports = routes;
