# swagger.json
@@ -5,7 +5,7 @@
     "title": "Recipe and Shopping List API",
     "description": "Recipe database with reviews and shopping list"
   },
-  "host": "localhost:3000",
+  "host": "recipe-application-group.herokuapp.com",
   "basePath": "/",
   "tags": [
     {
@@ -87,7 +87,7 @@
                   "type": "string",
                   "example": "62b0d6fc3620510a74d6ecba"
                 },
-                "keywords": {
+                "keyWords": {
                   "type": "array",
                   "example": [
                     "cream cheese",
@@ -127,17 +127,6 @@
         ],
         "summary": "Get all recipes from database",
         "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Retrieve all recipes",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -153,39 +142,11 @@
         "tags": [
           "Recipes"
         ],
+        "summary": "Get all recipes that have specified keyword(s)",
         "description": "",
         "parameters": [
           {
             "name": "keyWords",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/recipes/ingredients": {
-      "get": {
-        "tags": [
-          "Recipes"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "ingredients",
             "in": "query",
             "type": "string"
           }
@@ -211,6 +172,7 @@
         "tags": [
           "Recipes"
         ],
+        "summary": "Get all recipes posted by specific userId",
         "description": "",
         "parameters": [
           {
@@ -241,6 +203,7 @@
         "tags": [
           "Recipes"
         ],
+        "summary": "Get one recipe by recipe ID",
         "description": "",
         "parameters": [
           {
@@ -271,6 +234,7 @@
         "tags": [
           "Recipes"
         ],
+        "summary": "Get all recipes that have specified ingredient(s)",
         "description": "",
         "parameters": [
           {
@@ -300,7 +264,7 @@
         "tags": [
           "Recipes"
         ],
-        "summary": "Update recipe using ID",
+        "summary": "Update one recipe using recipe ID",
         "description": "",
         "parameters": [
           {
@@ -319,7 +283,7 @@
               "properties": {
                 "name": {
                   "type": "string",
-                  "example": "Pizza Pie"
+                  "example": "Updated Name Pizza Pie"
                 },
                 "ingredients": {
                   "type": "array",
@@ -398,6 +362,7 @@
         "tags": [
           "Recipes"
         ],
+        "summary": "Delete one recipe using recipe ID",
         "description": "",
         "parameters": [
           {
@@ -520,6 +485,10 @@
                   "items": {
                     "type": "string"
                   }
+                },
+                "userId": {
+                  "type": "string",
+                  "example": "62b22dbe5361f5388a5c5d87"
                 }
               },
               "required": [
@@ -571,15 +540,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Allows user to retrieve all shopping lists belonging to him/her",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
           }
         ],
         "responses": {
@@ -642,7 +602,35 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Allows user to update existing shopping list",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "Updated Grocery List 1"
+                },
+                "items": {
+                  "type": "array",
+                  "example": [
+                    "bread",
+                    "milk",
+                    "butter",
+                    "sugar",
+                    "updated additional item"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
           }
+          
         ],
         "responses": {
           "200": {
